contour/deploy/gateway/03-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: blue
  name: blue
  namespace: projectcontour
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
        - name: echo
          image: stevesloka/echo-server
          command: ["echo-server"]
          args:
            - --echotext=This is the BLUE site!
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
---


apiVersion: v1
kind: Service
metadata:
  labels:
    app: blue
  name: blue
  namespace: projectcontour
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: blue
  sessionAffinity: None
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: green
  name: green
  namespace: projectcontour
spec:
  replicas: 3
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
        - name: echo
          image: stevesloka/echo-server
          command: ["echo-server"]
          args:
            - --echotext=This is the GREEN site!
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
---


apiVersion: v1
kind: Service
metadata:
  labels:
    app: green
  name: green
  namespace: projectcontour
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: green
  sessionAffinity: None
  type: ClusterIP

---

kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: deploy
  namespace: projectcontour
  labels:
    app: deploy
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: contour
  hostnames:
  - "local.projectcontour.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: green
      port: 80
      weight: 50
    - kind: Service
      name: blue
      port: 80
      weight: 50
